HystrixCommand 프록시 생성 구현

--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,19 @@
 		<module>circuit-breaker-interceptor</module>
 		<module>sample-front</module>
 	</modules>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<!-- or whatever version you use -->
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	
 </project>
