--- a/sample-front/pom.xml
+++ b/sample-front/pom.xml
@@ -15,6 +15,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>circuit-breaker</groupId>
+			<artifactId>circuit-breaker-interceptor</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 </project>
