Javasssit의 Agent 방식을 이용한 Hystrix 적용 구현

--- a/circuit-breaker-interceptor/pom.xml
+++ b/circuit-breaker-interceptor/pom.xml
@@ -23,5 +23,22 @@
 		</dependency>
 	</dependencies>
 
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-jar-plugin</artifactId>
+<!-- 				<version>2.3.1</version> -->
+				<configuration>
+					<archive>
+						<index>true</index>
+						<manifestEntries>
+							<Premain-Class>circuitbreaker.Agent</Premain-Class>
+						</manifestEntries>
+					</archive>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 
 </project>
