--- a/circuit-breaker-interceptor/pom.xml
+++ b/circuit-breaker-interceptor/pom.xml
@@ -21,6 +21,12 @@
 			<artifactId>hystrix-core</artifactId>
 			<version>1.4.0-RC6</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.netflix.hystrix</groupId>
+		    <artifactId>hystrix-metrics-event-stream</artifactId>
+		    <version>1.4.0-RC6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
