프로젝트 및 그룹/아티팩트ID 등을 thor로 수정함

--- a/sample-front/pom.xml
+++ b/sample-front/pom.xml
@@ -17,7 +17,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>circuit-breaker</groupId>
+			<groupId>sandbox9.thor</groupId>
 			<artifactId>circuit-breaker-interceptor</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
