--- a/circuit-breaker-interceptor/pom.xml
+++ b/circuit-breaker-interceptor/pom.xml
@@ -2,12 +2,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>circuit-breaker</groupId>
-		<artifactId>circuit-breaker</artifactId>
+		<groupId>sandbox9.thor</groupId>
+		<artifactId>thor-parentpom</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>circuit-breaker-interceptor</artifactId>
-
 
 	<dependencies>
 		<dependency>
