--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>circuit-breaker</groupId>
-	<artifactId>circuit-breaker</artifactId>
+	<groupId>sandbox9.thor</groupId>
+	<artifactId>thor-parentpom</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
@@ -11,7 +11,8 @@
 		<module>sample-api2</module>
 		<module>circuit-breaker-interceptor</module>
 		<module>sample-front</module>
-	</modules>
+        <module>thor-connector</module>
+    </modules>
 
 	<build>
 		<plugins>
