Command 클래스 생성

--- a/thor-connector/pom.xml
+++ b/thor-connector/pom.xml
@@ -11,4 +11,17 @@
     <artifactId>thor-connector</artifactId>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.netflix.hystrix</groupId>
+            <artifactId>hystrix-core</artifactId>
+            <version>1.4.0-RC6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.netflix.hystrix</groupId>
+            <artifactId>hystrix-metrics-event-stream</artifactId>
+            <version>1.4.0-RC6</version>
+        </dependency>
+    </dependencies>
 </project>
