--- a/sample-front/pom.xml
+++ b/sample-front/pom.xml
@@ -15,10 +15,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>sandbox9.thor</groupId>
-			<artifactId>circuit-breaker-interceptor</artifactId>
+			<artifactId>thor-connector</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
