ui, api, db command 골격 코딩. api 외에는 아직 돌아가지는 않는 상태.. 전체 개편이 필요하지만 진선임과 공유 및 함께 개발하고자 우선 올림... 일단 집으로...

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
 		<module>circuit-breaker-interceptor</module>
 		<module>sample-front</module>
         <module>thor-connector</module>
+        <module>thor-connector-api</module>
+        <module>thor-connector-ui</module>
+        <module>thor-connector-db-mybatis</module>
     </modules>
 
 	<build>
