--- a/thor-connector-db-mybatis/pom.xml
+++ b/thor-connector-db-mybatis/pom.xml
@@ -17,11 +17,11 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.34</version>
-		</dependency>
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.3.2</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
