API 프로젝트 Executable jar 로 구성(도커 배포를 위하여)

--- a/sample-api/pom.xml
+++ b/sample-api/pom.xml
@@ -9,7 +9,8 @@
 	</parent>
 
 	<artifactId>sample-api</artifactId>
-	<packaging>war</packaging>
+	<version>0.0.1-SNAPSHOT</version>
+<!-- 	<packaging>war</packaging> -->
 
 
 	<dependencies>
@@ -18,4 +19,21 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 	</dependencies>
+
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
