--- a/sample-front/pom.xml
+++ b/sample-front/pom.xml
@@ -8,6 +8,7 @@
 	</parent>
 
 	<artifactId>sample-front</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 
 
 	<dependencies>
@@ -25,13 +26,24 @@
 			<artifactId>thor-connector</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>sandbox9.thor</groupId>
+			<artifactId>thor-connector-ui</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>sandbox9.thor</groupId>
+			<artifactId>thro-connector-api</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
 		<dependency>
 			<groupId>sandbox9.thor</groupId>
 			<artifactId>thor-connector-db-mybatis</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -51,5 +63,22 @@
 		</dependency>
 
 	</dependencies>
+
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
