데이터 확장 테스트코드 작성
공통 커맨드 클래스 적용

--- a/metrix-connector/pom.xml
+++ b/metrix-connector/pom.xml
@@ -11,6 +11,7 @@
 	<packaging>jar</packaging>
 
 	<dependencies>
+	
 		<dependency>
 			<groupId>com.netflix.hystrix</groupId>
 			<artifactId>hystrix-core</artifactId>
@@ -18,9 +19,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.netflix.hystrix</groupId>
-			<artifactId>hystrix-metrics-event-stream</artifactId>
-			<version>1.4.0-RC6</version>
+			<groupId>fury.metrix</groupId>
+			<artifactId>hystrix-metrics-event-stream-extension</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
 		<!-- RestTemplate을 사용하기 위한 임시 참조 -->
@@ -28,6 +29,13 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>4.1.4.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
