--- a/metrix-connector/pom.xml
+++ b/metrix-connector/pom.xml
@@ -18,11 +18,6 @@
 			<version>1.4.0-RC6</version>
 		</dependency>
 
-		<dependency>
-			<groupId>fury.metrix</groupId>
-			<artifactId>hystrix-metrics-event-stream-extension</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
 
 		<!-- RestTemplate을 사용하기 위한 임시 참조 -->
 		<dependency>
@@ -36,6 +31,12 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-core-asl</artifactId>
+			<version>1.9.2</version>
 		</dependency>
 
 		<dependency>
