--- a/metrix-connector/pom.xml
+++ b/metrix-connector/pom.xml
@@ -18,13 +18,11 @@
 			<version>1.4.0-RC6</version>
 		</dependency>
 
-
-		<!-- RestTemplate을 사용하기 위한 임시 참조 -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>4.1.4.RELEASE</version>
-		</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>4.1.4.RELEASE</version>
+        </dependency>
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
